# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  05 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  -livecd/cdtar/aboot-0.9-r1-cdtar.tar.bz2,
  +livecd/cdtar/aboot-1.0_pre20040408-r2-cdtar.tar.bz2:
  Updated aboot cdtar with a newer version to support newer kernels.

  05 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-chroot.sh, targets/support/chroot-functions.sh:
  Updated make_destpath so it writes out to make.conf as well as exporting
  ROOT to the environment, added a make_destpath call to cleanup_stages, and
  adding make_destpath /tmp/stage1root to stage1.

  05 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org> README, catalyst:
  Updated README a bit and rolling 2.0.6_pre12 for testing.

  05 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/create-iso.sh:
  Removed any further checks for clst_fstype and making sure everybody is
  using ${mkisofs_zisofs_opts}.

  05 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  The default theme for GNOME is now Clearlooks, so we can remove the theme
  code, but we still want to set the font size.

  05 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  We need to put quotes around ${user_comment} or useradd gets confused.

  05 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/chroot-functions.sh:
  Changed make_destpath to write out ROOT to make.conf, rather than (ab)using
  the environment.

  05 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/kmerge.sh:
  Added an additional make_destpath call to kmerge.sh so it'll export ROOT=/
  prior to running genkernel. This is catalyst 2.0.6_pre11 for testing.

  04 Mar 2008; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/create-iso.sh:
  Bash fscking sucks, so we have to compromise on this code reduction solution
  a bit. It's still far better than it was
