@@ -2,6 +2,10 @@
 # $Id: $
 
   05 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org>
+  targets/support/kmerge.sh:
+  We should run the default functions for kmerge.sh, too.
+
+  05 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org>
   -livecd/cdtar/aboot-0.9-r1-cdtar.tar.bz2,
   +livecd/cdtar/aboot-1.0_pre20040408-r2-cdtar.tar.bz2:
   Updated aboot cdtar with a newer version to support newer kernels.
